--- a/app/src/main/res/layout/details_speaker.xml
+++ b/app/src/main/res/layout/details_speaker.xml
@@ -68,7 +68,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/iw_picture"
         android:layout_marginRight="10dp"
         android:layout_alignTop="@+id/tw_speakername"
         android:layout_alignParentLeft="true"
