--- a/app/src/main/res/layout/details_partner.xml
+++ b/app/src/main/res/layout/details_partner.xml
@@ -14,31 +14,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/tw_partnername"
+        android:text="Name"
         android:layout_marginTop="25dp"
+        android:layout_marginBottom="50dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Email"
-        android:id="@+id/tw_speakeremail"
-        android:layout_below="@+id/tw_partnername"
-        android:layout_alignLeft="@+id/tw_partnername"
-        android:layout_alignStart="@+id/tw_partnername" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Function"
-        android:id="@+id/tw_speakerfunction"
-        android:layout_below="@+id/tw_speakeremail"
-        android:layout_alignLeft="@+id/tw_speakeremail"
-        android:layout_alignStart="@+id/tw_speakeremail" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,16 +28,15 @@
         android:text="Website"
         android:autoLink="web"
         android:id="@+id/tw_partnerwebsite"
-        android:layout_below="@+id/tw_speakerfunction"
-        android:layout_alignLeft="@+id/tw_speakerfunction"
-        android:layout_alignStart="@+id/tw_speakerfunction" />
+        android:layout_below="@+id/tw_partnername"
+        android:layout_alignLeft="@+id/tw_partnername"
+        android:layout_alignStart="@+id/tw_partnername" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Information"
-        android:id="@+id/tw_speakersinformations"
-        android:autoLink="web"
+        android:id="@+id/tw_partnersinformations"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_below="@+id/tw_partnerwebsite"
         android:layout_alignParentLeft="true"
@@ -70,7 +49,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/iw_picture_speaker"
+        android:id="@+id/iw_picture_partner"
         android:layout_marginRight="10dp"
         android:layout_alignTop="@+id/tw_partnername"
         android:layout_alignParentLeft="true"
