--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/iw_picture_partner"
+        android:id="@+id/iw_picture"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginBottom="5dp"
@@ -11,14 +11,14 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp" />
     <TextView
-        android:id="@+id/organiser_name"
+        android:id="@+id/tw_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:paddingTop="5dp"
         android:text="Firstname - Lastname"
-        android:layout_alignTop="@+id/iw_picture_partner"
-        android:layout_toRightOf="@+id/iw_picture_partner"
-        android:layout_toEndOf="@+id/iw_picture_partner" />
+        android:layout_alignTop="@+id/iw_picture"
+        android:layout_toRightOf="@+id/iw_picture"
+        android:layout_toEndOf="@+id/iw_picture" />
 
 </RelativeLayout>
