--- a/app/src/main/res/layout/details_partner.xml
+++ b/app/src/main/res/layout/details_partner.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/tw_partnername"
+        android:id="@+id/tw_talkname"
         android:text="Name"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="50dp"
@@ -27,10 +27,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Website"
         android:autoLink="web"
-        android:id="@+id/tw_partnerwebsite"
-        android:layout_below="@+id/tw_partnername"
-        android:layout_alignLeft="@+id/tw_partnername"
-        android:layout_alignStart="@+id/tw_partnername" />
+        android:id="@+id/tw_talkhour"
+        android:layout_below="@+id/tw_talkname"
+        android:layout_alignLeft="@+id/tw_talkname"
+        android:layout_alignStart="@+id/tw_talkname" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:text="Information"
         android:id="@+id/tw_partnersinformations"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_below="@+id/tw_partnerwebsite"
+        android:layout_below="@+id/tw_talkhour"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="36dp"
@@ -49,12 +49,12 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/iw_picture_partner"
+        android:id="@+id/iw_picture"
         android:layout_marginRight="10dp"
-        android:layout_alignTop="@+id/tw_partnername"
+        android:layout_alignTop="@+id/tw_talkname"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_toLeftOf="@+id/tw_partnername"
-        android:layout_alignBottom="@+id/tw_partnerwebsite" />
+        android:layout_toLeftOf="@+id/tw_talkname"
+        android:layout_alignBottom="@+id/tw_talkhour" />
 
 </RelativeLayout>
